Bug 311601 - Crash/Assert when paging down to end of document
Summary: Crash/Assert when paging down to end of document
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
: 311803 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-12-12 23:42 UTC by Christoph Feck
Modified: 2012-12-16 23:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2012-12-12 23:42:05 UTC
Application: okular (0.15.90)
KDE Platform Version: 4.9.90 (Compiled from sources)
Qt Version: 4.8.4
Operating System: Linux 3.6.9-1-desktop i686
Distribution: "openSUSE 12.2 (i586)"

-- Information about the crash:
The assert is:

ASSERT failure in QVector<T>::operator[]: "index out of range", file /usr/include/QtCore/qvector.h, line 359

Happens when scrolling/paging down, but only near the end of the document (maybe trying to request not existing "next" page)

Today's master at 3485faf6dd91300aec206a638b3993e0860e7321, poppler 0.21.1

The crash can be reproduced every time.

-- Backtrace:
Application: Okular (okular), signal: Aborted
Using host libthread_db library "/lib/libthread_db.so.1".
[KCrash Handler]
#7  0xb7730424 in __kernel_vsyscall ()
#8  0xb569131f in raise () from /lib/libc.so.6
#9  0xb5692c03 in abort () from /lib/libc.so.6
#10 0xb5a3de3e in qt_message_output(QtMsgType, char const*) () from /usr/lib/libQtCore.so.4
#11 0xb5a3e039 in ?? () from /usr/lib/libQtCore.so.4
#12 0xb5a3e158 in qFatal(char const*, ...) () from /usr/lib/libQtCore.so.4
#13 0xb5a3e19d in qt_assert_x(char const*, char const*, char const*, int) () from /usr/lib/libQtCore.so.4
#14 0xb3a461b7 in QVector<PageViewItem*>::operator[] (this=0x948d688, i=3) at /usr/include/QtCore/qvector.h:359
#15 0xb3a422b0 in PageView::slotRequestVisiblePixmaps (this=0x9489698, newValue=6431) at /local/git/KDE/graphics/okular/ui/pageview.cpp:4195
#16 0xb3a44916 in PageView::qt_static_metacall (_o=0x9489698, _c=QMetaObject::InvokeMetaMethod, _id=17, _a=0xbf88bdc8) at /local/build/KDE/graphics/okular/pageview.moc:172
#17 0xb5b739b2 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#18 0xb6996365 in QAbstractSlider::valueChanged(int) () from /usr/lib/libQtGui.so.4
#19 0xb669c5c3 in QAbstractSlider::setValue(int) () from /usr/lib/libQtGui.so.4
#20 0xb669c8c0 in QAbstractSlider::triggerAction(QAbstractSlider::SliderAction) () from /usr/lib/libQtGui.so.4
#21 0xb669cc62 in QAbstractSlider::timerEvent(QTimerEvent*) () from /usr/lib/libQtGui.so.4
#22 0xb5b71784 in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#23 0xb62d3b4a in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#24 0xb669d1f3 in QAbstractSlider::event(QEvent*) () from /usr/lib/libQtGui.so.4
#25 0xb673e2fa in QScrollBar::event(QEvent*) () from /usr/lib/libQtGui.so.4
#26 0xb627ab9c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#27 0xb627f644 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#28 0xb6e1d106 in KApplication::notify (this=0xbf88c7c8, receiver=0x948d0c0, event=0xbf88c4e0) at /local/git/KDE/libs/kdelibs/kdeui/kernel/kapplication.cpp:311
#29 0xb5b5b65e in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#30 0xb5b8ff37 in ?? () from /usr/lib/libQtCore.so.4
#31 0xb5b8cfb8 in ?? () from /usr/lib/libQtCore.so.4
#32 0xb5b8cff2 in ?? () from /usr/lib/libQtCore.so.4
#33 0xb4e927d3 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#34 0xb4e92b70 in ?? () from /usr/lib/libglib-2.0.so.0
#35 0xb4e92c51 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#36 0xb5b8d631 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#37 0xb632c48a in ?? () from /usr/lib/libQtGui.so.4
#38 0xb5b5a12c in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#39 0xb5b5a421 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#40 0xb5b5f6da in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#41 0xb6278a14 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#42 0x0804fd22 in main (argc=6, argv=0xbf88c914) at /local/git/KDE/graphics/okular/shell/main.cpp:94

Reported using DrKonqi
Comment 1 Fabio D'Urso 2012-12-13 10:43:38 UTC
Git commit 5b8d51d66e877a33bb30ebb76322e678a81808b4 by Fabio D'Urso.
Committed on 13/12/2012 at 11:40.
Pushed by fabiod into branch 'master'.

Fixed wrong index

M  +1    -1    ui/pageview.cpp

http://commits.kde.org/okular/5b8d51d66e877a33bb30ebb76322e678a81808b4
Comment 2 Fabio D'Urso 2012-12-16 23:06:13 UTC
*** Bug 311803 has been marked as a duplicate of this bug. ***