Fixed wrong index

BUG: 311601